# fastapi-blog

./: .env.dev  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  prestart.sh  pyproject.toml
src/app/: routers.py
src/app/base/: base_service.py
src/app/user/: api.py  models.py  schemas.py  service.py
src/config/: local_config.py  settings.py  tortoise_conf.py
src/db/: base.py  session.py
src/db/migrations/: env.py
